<resources>
    <string name="app_name"> </string>
    <string name="strSearch">Search</string>
    <string name="strfavourites">Favourites</string>
    <string name="strIngredients">Ingredients</string>
    <string name="strShoppingCart">Shopping Cart</string>
    <string name="strOptions">Settings</string>
    <string name="btnSearchButton">Search</string>
    <string name="search_button">Search Button</string>
    <string name="home_button">Home Button</string>
    <string name="favourites_button">Favourites Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="favourites">Favourites</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove">Remove</string>
    <string name="refresh">Refresh</string>
    <string name="pantry">Pantry</string>
    <string name="poundSign">£</string>
    <string name="add_ingredients">Add Ingredients</string>
</resources>