<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"/>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="642dp"
            android:layout_below="@+id/search" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listview"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/ic_home_black_24dp"
                android:contentDescription="@string/home_button" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/ic_search_black_24dp"
                android:contentDescription="@string/search_button" />

            <ImageButton
                android:id="@+id/btnFav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/ic_favorite_black_24dp"
                android:contentDescription="@string/favourites_button" />

            <ImageButton
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/ic_settings_black_24dp"
                android:contentDescription="@string/settings_button" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>